experimental/ir/testdata/extend/wrong_kind.proto.stderr.txt
error: expected message type, found message extension `test.Foo.x`
  --> testdata/extend/wrong_kind.proto:22:12
   |
22 |     extend x {
   |            ^ expected message type
23 |         optional int32 x = 1;
   |                        - defined here

error: expected message type, found enum value `test.Foo.BAZ`
  --> testdata/extend/wrong_kind.proto:25:12
   |
20 |     enum Bar { BAZ = 1; }
   |                --- defined here
...
24 |     }
25 |     extend BAZ {
   |            ^^^ expected message type

error: expected message type, found enum type `test.Foo.Bar`
  --> testdata/extend/wrong_kind.proto:28:12
   |
20 |     enum Bar { BAZ = 1; }
   |          --- defined here
...
27 |     }
28 |     extend Bar {
   |            ^^^ expected message type

error: expected message type, found `package` declaration `test`
  --> testdata/extend/wrong_kind.proto:31:12
   |
17 | package test;
   | ------------- defined here
...
30 |     }
31 |     extend test {
   |            ^^^^ expected message type

error: expected message type, found oneof definition `test.Foo.self`
  --> testdata/extend/wrong_kind.proto:39:12
   |
35 |     oneof self {
   |           ---- defined here
...
39 |     extend self {
   |            ^^^^ expected message type

error: expected message type, found scalar type `string`
  --> testdata/extend/wrong_kind.proto:43:12
   |
43 |     extend string {
   |            ^^^^^^ expected message type

encountered 6 errors
